fix the navigation and add the side nav bar
After setup navigation, I am now going to work on the footer.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,25 @@
                   /></a>
         
                   <div id="ExLinks">
-                    <a>Example</a>
+                    <a href="#element">Example</a>
                   </div>
                 </div>
           
     </nav>
+    <div class="sidenav">
+        <a href="#element">Element-1</a>
+        <a href="#element">Element-2</a>
+        <a href="#element">Element-3</a>
+        <a href="#element">Element-4</a>
+        <a href="#element">Element-5</a>
+        <a href="#element">Element-6</a>
+        <a href="#element">Element-7</a>
+        <a href="#element">Element-8</a>
+        <a href="#element">Element-9</a>
+        <a href="#element">Element-10</a>
+        <a href="#element">Element-11</a>
+        <a href="#element">Element-12</a>
+      </div>
     </header>
     <main></main>
     <footer></footer>
