adding columns in footer to make it as i want
I was trying all different kinds of ways to make it workable.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,25 @@
                 /></a>
               </figure>
             </div>
+            <div class="footer-row-second-col-links">
+              <h3>Business Links</h3>
+              <p>
+                <a href="#Links" target="_blank"
+                rel="external">Link1</a>
+              </p>
+              <p>
+                <a href="#Links" target="_blank"
+                rel="external">Link2</a>
+              </p>
+              <p>
+                <a href="#Links" target="_blank"
+                rel="external">Link3</a>
+              </p>
+              <p>
+                <a href="#Links" target="_blank"
+                rel="external">Link4</a>
+              </p>
+            </div>
             
           </div>
         </div>
